[package]
name = "cwl"
version = "0.1.0"
authors = ["ericcanton <57836255+ericcanton@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusoto_logs = { version = "0.46" }
rusoto_core = { version = "0.46" }
tokio = { version = "1", features = ["sync"] }
chrono = "0.4"
colored = "2"
clap = {version = "2", features = ["yaml"]}